# cop_theif__game

./: .env-example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.json  logging_config.json  rate_limits.json
docs/: PLAN.md  PRD.md  PRD_game_engine.md  PRD_mcp_orchestration.md  PRD_q_learning.md  PRD_reporting.md  TODO.md  prompt_book.md  ui_workflow.md
notebooks/: qlearning_analysis.ipynb  results_analysis.ipynb
results/: game_report.json  official_run_evidence.txt
scripts/: capture_ui_screenshots.py  check_line_limit.py  generate_html_report.py  secret_scan.py
src/copthief/: __init__.py  constants.py  main.py
src/copthief/agents/: __init__.py  heuristic.py  qlearning.py  strategy.py  training.py
src/copthief/gui/: __init__.py  app.py
src/copthief/llm/: __init__.py  openai_provider.py  (+2 more)
tests/: test_constants.py  test_main.py  test_package_skeleton.py  test_smoke.py  test_version.py
tests/agents/: test_factory.py  test_heuristic.py  test_heuristic_8dir.py  test_qlearning.py  test_training.py
tests/integration/: test_end_to_end.py  test_sanity_ladder.py
tests/llm/: test_anthropic_provider.py  test_openai_provider.py  test_provider.py
tests/mcp/: test_agent_server.py  test_client.py  test_launcher.py  test_sync_session.py
tests/reporting/: test_game_report.py  test_gmail_sender.py  test_report_metadata.py  test_sinks.py
tests/sdk/: test_sdk.py
tests/services/: test_barriers.py  test_dialogue.py  test_game_engine.py  test_orchestrator.py  test_random_start.py  test_role_assigner.py  test_scoring.py
tests/shared/: test_config.py  test_config_extras.py  test_gatekeeper.py
(+23 files in other folders)
