[project]
name = "copthief"
version = "1.0.0"
description = "Dual AI Agent Pursuit (Cop vs. Thief) via MCP servers — local-only build."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mhmdabad", email = "mhmdabad10@gmail.com" }]
dependencies = [
    "anthropic>=0.115.1",
    "fastmcp>=3.4.2",
    "google-api-python-client>=2.198.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "openai>=2.44.0",
]

[project.scripts]
copthief = "copthief.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copthief"]

# Dev toolchain used by CI (.github/workflows/ci.yml). Installed by `uv sync`.
[dependency-groups]
dev = [
  "ruff>=0.6",
  "mypy>=1.8",
  "pytest>=8",
  "pytest-cov>=5",
  "matplotlib>=3.10.9",
  "numpy>=2.2.6",
]

# --- Lint (guidelines §7.1) ---
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

# --- Type checking ---
[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true

# --- Tests ---
[tool.pytest.ini_options]
testpaths = ["tests"]

# --- Coverage: the ≥85% gate lives here, not in CI (guidelines §6.2) ---
[tool.coverage.run]
source = ["src"]
omit = ["src/copthief/main.py", "*/tests/*", "src/copthief/gui/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
